--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "@babel/preset-env": "^7.16.5",
     "@babel/preset-typescript": "^7.16.5",
     "@types/jest": "^27.0.3",
+    "@types/lodash.sumby": "^4.6.6",
     "babel-jest": "^27.4.5",
     "jest": "^27.4.5"
+  },
+  "dependencies": {
+    "lodash.sumby": "^4.6.0"
   }
 }
